[project]
name = "hhl-openai-agents-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [ { name = "Heng G"}]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.5.0",
    "logfire>=3.8.1",
    "openai-agents>=0.0.4",
    "python-dotenv>=1.0.1",
]

[project.scripts]
hhl-openai-agents-sdk = "hhl_openai_agents_sdk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
notebooks = [
    "ipykernel>=6.29.5",
]
